@@ -1,3 +1,8 @@
+2009-07-15  Roland McGrath  <roland@redhat.com>
+
+	* dwarf_getlocation.c: Grok DW_OP_form_tls_address,
+	DW_OP_GNU_push_tls_address, and DW_OP_bit_piece.
+
 2009-07-13  Roland McGrath  <roland@redhat.com>
 
 	* dwarf_getlocation.c: Grok DW_OP_call_frame_cfa.
